# index_correlation

./: .gitignore  .vet.sh  Makefile  README.md  main.py  pyproject.toml  pytest.ini  vet.sh
deployments/docker/: Dockerfile  docker-compose.yaml
docs/: ADDING_NEW_INDEX.md  API.md  ARCHITECTURE.md  DESIGN_V2.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  REFACTORING_PLAN.md  SRC_ARCHITECTURE.md  docs.md
examples/: basic_run.py  custom_workflow.py
jobs/: backfill_correlations.py  cleanup_old_data.py  compute_correlations_realtime.py
src/config/: database.yaml  database_config.py  index_config.py  results_config.py  settings.py
src/connectors/: data_loader.py  extractors.py  results_writer.py
src/core/: data_models.py  models.py
src/index_correlation/analytics/: engine.py
src/index_correlation/analytics/quantities/: correlation.py
src/index_correlation/config/: database_config.py  index_config.py  indexes.yaml  results_config.py  settings.py
src/index_correlation/connectors/: data_loader.py  extractors.py  results_writer.py
src/index_correlation/core/: __init__.py  data_models.py  exceptions.py  models.py
src/index_correlation/extraction/: data_loader.py  extractors.py
src/index_correlation/storage/: bigquery_writer.py  interface.py  postgres_writer.py  schemas.py  writer_factory.py
src/index_correlation/storage/backends/: bigquery_writer.py  postgres_writer.py
src/storage/: bigquery_writer.py  postgres_writer.py  writer_factory.py
src/transforms/: engine.py
tests/: conftest.py
tests/unit/: test_analytics.py  test_models.py
